# indus.io

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py  exceptions.py  permissions.py  security.py
backend/app/db/: base.py  database.py  graph.py  init_graph.sql
backend/app/models/: project.py  user.py
backend/app/modules/analytics/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/identity/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/intelligence/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/monitoring/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/production/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/project/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/simulation/: __init__.py  engine.py  models.py  router.py  schemas.py  service.py
backend/app/modules/telemetry/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/routers/: project.py
backend/app/schemas/: project.py
backend/app/services/: project.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/components/: navbar.tsx  pipeline-builder.tsx  test-connectivity.tsx
(+20 files in other folders)
