[project]
name = "app"
version = "0.1.0"
description = "The backend for the Production Line Simulation Platform \"indus.io\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard] (>=0.44.0,<1.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
